--- a/modules/configuration/client/views/partials/manage-milestones.html
+++ b/modules/configuration/client/views/partials/manage-milestones.html
@@ -27,53 +27,68 @@
                 <div ng-show="!configDataElement.activeRecord">Select an item in the table or <a href ng-click="configDataElement.newRecord()">click here</a> to create a new one.</div>
                 <div ng-show="configDataElement.activeRecord">
 
-                    <div class="form-group">
-                        <label class="control-label">Name</label>
-                        <input class="form-control" type="text" ng-model="configDataElement.activeRecord.name" x-kebab-this x-source="configDataElement.activeRecord.name" x-destination="configDataElement.activeRecord.code">
-                    </div>
+                    <form name="milestonesForm" ng-submit="configDataElement.saveRecord(milestonesForm.$valid)" novalidate>
 
-                    <div class="form-group">
-                        <label class="control-label">Code</label>
-                        <input class="form-control" type="text" ng-model="configDataElement.activeRecord.code">
-                    </div>
-
-                    <div class="form-group">
-                        <label class="control-label">Order</label>
-                        <input class="form-control" type="number" ng-model="configDataElement.activeRecord.order">
-                    </div>
-
-                    <div class="form-group">
-                        <a href
-                            class="control-label pull-right"
-                            x-modal-select-items
-                            x-all-items="configDataElement.data.activities"
-                            x-single="false"
-                            x-parent-object="configDataElement.activeRecord"
-                            x-selected-items="configDataElement.activeRecord.activities"
-                            x-item-name="Activities for {{ configDataElement.activeRecord.name }}"
-                            x-callback="">Edit</a>
-                        <label class="control-label">Activities for this Milestone</label>
-
-                        <ul class="list-unstyled well well-sm">
-                            <li ng-show="configDataElement.activeRecord.activities.length === 0">No Activities selected</li>
-                            <li ng-repeat="activity in configDataElement.activeRecord.activities | orderBy:'order' track by $index"><em class="small text-success">activity:</em>&nbsp;{{ activity.name }}</li>
-                        </ul>
-
-                    </div>
-
-                    <div class="form-group">
-                        <a href modal-permission-matrix x-target-object="configDataElement.activeRecord">Permissions</a>
-                    </div>
-
-                    <div class="row">
-                        <div class="form-group col-sm-6">
-                            <button class="btn btn-primary" ng-click="configDataElement.saveRecord()">Save</button>
-                            <button class="btn btn-default" ng-click="configDataElement.cancelRecord()">Cancel</button>
+                        <div class="form-group" x-show-errors>
+                            <label class="control-label">Name</label>
+                            <input name="name" class="form-control" type="text" ng-model="configDataElement.activeRecord.name" x-kebab-this x-source="configDataElement.activeRecord.name" x-destination="configDataElement.activeRecord.code" required>
+                                <div ng-messages="milestonesForm.name.$error" role="alert">
+                                    <p class="help-block error-text" ng-message="required">Name is required.</p>
+                                </div>
                         </div>
-                        <div class="form-group col-sm-6 text-right" ng-show="!configDataElement.activeRecordNew">
-                            <button class="btn btn-danger" ng-click="configDataElement.deleteRecord()">Delete</button>
+
+                        <div class="form-group" x-show-errors>
+                            <label class="control-label">Code</label>
+                            <input name="code" class="form-control" type="text" ng-model="configDataElement.activeRecord.code" required>
+                                <div ng-messages="milestonesForm.code.$error" role="alert">
+                                    <p class="help-block error-text" ng-message="required">Code is required.</p>
+                                </div>
                         </div>
-                    </div>
+
+                        <div class="form-group" x-show-errors>
+                            <label class="control-label">Order</label>
+                            <input name="order" class="form-control" type="number" ng-model="configDataElement.activeRecord.order" required>
+                                <div ng-messages="milestonesForm.order.$error" role="alert">
+                                    <p class="help-block error-text" ng-message="required">Order is required.</p>
+                                </div>
+                        </div>
+
+                        <div class="form-group">
+                            <a href
+                                class="control-label pull-right"
+                                x-modal-select-items
+                                x-all-items="configDataElement.data.activities"
+                                x-single="false"
+                                x-parent-object="configDataElement.activeRecord"
+                                x-selected-items="configDataElement.activeRecord.activities"
+                                x-item-name="Activities for {{ configDataElement.activeRecord.name }}"
+                                x-callback="">Edit</a>
+                            <label class="control-label">Activities for this Milestone</label>
+
+                            <ul class="list-unstyled well well-sm">
+                                <li ng-show="configDataElement.activeRecord.activities.length === 0">No Activities selected</li>
+                                <li ng-repeat="activity in configDataElement.activeRecord.activities | orderBy:'order' track by $index"><em class="small text-success">activity:</em>&nbsp;{{ activity.name }}</li>
+                            </ul>
+
+                        </div>
+
+                        <div class="form-group">
+                            <a href modal-permission-matrix x-target-object="configDataElement.activeRecord">Permissions</a>
+                        </div>
+
+                        <hr>
+
+                        <div class="row">
+                            <div class="form-group col-sm-6">
+                                <button class="btn btn-danger" ng-click="configDataElement.deleteRecord()" ng-show="!configDataElement.activeRecordNew">Delete</button>
+                            </div>
+                            <div class="form-group col-sm-6 text-right">
+                                <button class="btn btn-default" ng-click="configDataElement.cancelRecord()">Cancel</button>
+                                <button class="btn btn-default" type="submit">Save</button>                           
+                            </div>
+                        </div>
+
+                    </form>
 
                 </div>
             </div>
