--- a/modules/projects/client/views/project-partials/project.entry.html
+++ b/modules/projects/client/views/project-partials/project.entry.html
@@ -73,7 +73,7 @@
 
 				<div class="col-sm-3">
 					<div class="form-group" x-show-errors>
-						<label for="commodity" class="control-label">Commodity / IES</label>
+						<label for="commodity" class="control-label">Commodity/ies</label>
 						<input id="commodity" name="commodity" type="text" class="form-control input-sm" ng-model="project.commodity">
 							<div ng-messages="projectForm.commodity.$error" role="alert">
 								<p class="help-block error-text" ng-message="required">Commodity is required.</p>
