--- a/modules/projects/client/views/projects.abstract.html
+++ b/modules/projects/client/views/projects.abstract.html
@@ -6,14 +6,24 @@
 				<h3 class="panel-title">Public Project Listing</h3>
 			</div>
 			<div class='panel-body'>
-				<p>The Ministry of Energy and Mines (MEM) is committed to making information on permitted mine sites in British Columbia more accessible to interested parties. MEM has collaborated with the BC Environmental Assessment Office (EAO) to post the following documents online:</p>
-				<ul>
-				<li>Permits and amendments for major mines</li>
-				<li>MEM inspection reports (2013 onwards)</li>
-				<li>Dam safety inspections/reviews (2013 onwards)</li>
-				<li>Annual reclamation reports (2013 onwards)</li>
-				</ul> 
-				<p>More documents will be posted in future phases of this initiative; this first phase is limited to documents that meet the specifications above and are currently available electronically. Requests for specific documents not available via this web platform can be directed to the Ministry of Energy and Mines and/or to the Office of the Chief Information Officer (for requests made under the Freedom of Information and Protection of Privacy Act).</p>
+
+
+<p>The Ministry of Energy and Mines (MEM) is committed to making information on permitted mine sites in British Columbia more accessible to interested parties. MEM has collaborated with the BC Environmental Assessment Office (EAO) to develop a new platform and has to date posted the following information online:</p>
+
+<ul>
+<li>Permits and amendments for major mines that are currently operating or under construction</li>
+<li>MEM inspection reports (2013 onwards) for major mines that are currently operating or under construction</li>
+</ul>
+
+<p>In the coming months, the following information will be posted:</p>
+<ul>
+<li>Permits and amendments for all major mines in BC (i.e., closed mines and mines in care and maintenance in addition to those that are currently operating/under construction)</li>
+<li>Dam safety inspections/reviews for permitted major mines (2013 onwards)</li>
+<li>Annual reclamation reports for permitted major mines (2013 onwards)</li>
+</ul>
+
+<p>More documents will be posted in future phases of this initiative; this first phase is limited to documents that meet the specifications above and are currently available electronically. Requests for specific documents not available via this web platform can be directed to the Ministry of Energy and Mines and/or to the Office of the Chief Information Officer (for requests made under the Freedom of Information and Protection of Privacy Act).</p>
+
 			</div>
 		</div>
 
