--- a/modules/projects/client/views/projects-partials/projects-list.html
+++ b/modules/projects/client/views/projects-partials/projects-list.html
@@ -7,6 +7,7 @@
 	<table x-show-filter="toggleFilter" ng-table="projectList.tableParams" class="table table-condensed table-striped">
 		<tr ng-repeat="o in $data" class='clickable' ui-sref="p.detail({projectid: o.code})">
 			<td title="'Name'"     filter="{'name':'text'}"     			sortable="'name'"   >{{o.name}}</td>
+			<td ng-if="environment === 'MEM'" title="'Permit'"   filter="{'memPermitID':'text'}" filter-data="projectList.memPermitID"  			sortable="'memPermitID'" >{{o.memPermitID}}</td>
 			<td title="'Type'"     filter="{'type':'select'}" filter-data="projectList.types"    			sortable="'type'"   >{{o.type}}</td>
 			<td title="'Region'"   filter="{'region':'text'}"   			sortable="'region'" >{{o.region | regionName}}</td>
 			<td title="'Phase'"    filter="{'currentPhase.name':'text'}"   	sortable="'currentPhase.name'" >{{o.currentPhase.name}}</td>
