Remove filtering on document types, increase max allowable to 300MB

--- a/modules/documents/client/views/partials/document-upload-classify.html
+++ b/modules/documents/client/views/partials/document-upload-classify.html
@@ -6,9 +6,7 @@
 		        ngf-drag-over-class="dragover"
 		        ngf-multiple="true"
 		        ngf-allow-dir="true"
-		        ngf-max-total-size="100MB"
-		        accept="image/*,application/pdf"
-		        ngf-pattern="'image/*,application/pdf'">Drop files here or click to upload
+		        ngf-max-total-size="300MB">Drop files here or click to upload
 		    </div>
 		</div>
 	</div>
