--- a/modules/documents/client/views/partials/document-upload-general.html
+++ b/modules/documents/client/views/partials/document-upload-general.html
@@ -2,11 +2,13 @@
 <div class="well well-sm clearfix">
 	<div class="row">
 		<div class="col-md-12">
-		    <div ngf-drop ngf-select ng-model="files" class="drop-box"
-		        ngf-drag-over-class="dragover" ngf-multiple="true" ngf-allow-dir="true"
-		        accept="image/*,application/pdf"
-		        ngf-pattern="'image/*,application/pdf'">Drop files here or click to select
-		    </div>
+			<div ngf-drop ngf-select
+				ng-model="files"
+				class="drop-box"
+				ngf-drag-over-class="dragover"
+				ngf-multiple="true"
+				ngf-allow-dir="true">Drop files here or click to select
+			</div>
 		</div>
 	</div>
 
