--- a/modules/documents/client/views/partials/document-upload-classify-mem.html
+++ b/modules/documents/client/views/partials/document-upload-classify-mem.html
@@ -2,14 +2,12 @@
 <div class="well well-sm container-fluid">
 	<div class="row">
 		<div class="col-md-12">
-		    <div ngf-drop ngf-select ng-model="files" class="drop-box"
-		        ngf-drag-over-class="dragover"
-		        ngf-multiple="true"
-		        ngf-allow-dir="true"
-		        ngf-max-total-size="100MB"
-		        accept="image/*,application/pdf"
-		        ngf-pattern="'image/*,application/pdf'">Drop files here or click to upload
-		    </div>
+			<div ngf-drop ngf-select ng-model="files" class="drop-box"
+				ngf-drag-over-class="dragover"
+				ngf-multiple="true"
+				ngf-allow-dir="true"
+				ngf-max-total-size="300MB">Drop files here or click to upload
+			</div>
 		</div>
 	</div>
 
