--- a/modules/organizations/client/views/organization-list.html
+++ b/modules/organizations/client/views/organization-list.html
@@ -3,13 +3,14 @@
 <div class="row">
 	<div class="col-sm-12 text-right">
 		<a class="btn btn-xs btn-link" ui-sref="admin.organization.create()">+ Add New Organization</a>
+		<show-filter x-toggle-filter="toggleFilter"></show-filter>
 	</div>
 </div>
 
 <div class="row">
 	<div class="col-sm-12">
 		<section class="panel panel-default">
-			<table ng-table="tableParams" class="table table-condensed table-striped table-hover">
+			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-condensed table-striped table-hover">
 				<tr ng-repeat="o in $data" ui-sref="admin.organization.detail({orgId:o._id})" class="clickable">
 					<td data-title="'Name'"  filter="{'name':'text'}"   sortable="'name'">{{o.name}}</td>
 					<td data-title="'DBA'"  filter="{'companyDba':'text'}"   sortable="'companyDba'">{{o.companyDba}}</td>					
@@ -18,6 +19,11 @@
 						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="admin.organization.edit({orgId:o._id})">
 							<i class="glyphicon glyphicon-pencil"></i>
 						</a>
+					</td>
+				</tr>
+				<tr ng-if="!$data || $data.length === 0">
+					<td colspan="4">
+						No records found.
 					</td>
 				</tr>
 			</table>
