--- a/modules/organizations/client/views/organization-user-edit.html
+++ b/modules/organizations/client/views/organization-user-edit.html
@@ -6,7 +6,7 @@
 
 	<div class="row">
 		<div class="col-sm-12 text-right">
-			<button class="btn btn-xs btn-link" ui-sref="admin.organization.detail({orgId: $stateParams.orgId})">Cancel</button>
+			<button class="btn btn-xs btn-link" ui-sref="admin.organization.detail({orgId: org._id})">Cancel</button>
 			<button class="btn btn-xs btn-link" href type="submit">Save</button>
 		</div>
 	</div>
@@ -176,7 +176,7 @@
 
 			<div class="row">
 				<div class="col-sm-12 text-right">
-					<button class="btn btn-default" ui-sref="admin.organization.detail({orgId: $stateParams.orgId})">Cancel</button>
+					<button class="btn btn-default" ui-sref="admin.organization.detail({orgId: org._id})">Cancel</button>
 					<button class="btn btn-default" type="submit">Save</button>
 				</div>
 			</div>
