--- a/modules/organizations/client/views/organization-view.html
+++ b/modules/organizations/client/views/organization-view.html
@@ -129,12 +129,14 @@
 <section class="panel panel-default">
 	
 	<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-condensed table-striped table-hover">
-		<tr ng-repeat="o in $data" class='clickable' ui-sref="admin.organization.user.edit({orgId: org._id, userId: o._id})">
-			<td data-title="'Name'"  filter="{'name':'text'}"   sortable="'name'">{{o.name}}</td>
+		<tr ng-repeat="o in $data" class='clickable' ui-sref="admin.organization.user.detail({orgId: org._id, userId: o._id})">
+			<td data-title="'Name'"  filter="{'displayName':'text'}"   sortable="'displayName'">{{o.displayName}}</td>
 			<td data-title="'Username'"  filter="{'username':'text'}"   sortable="'username'">{{o.username}}</td>
 			<td data-title="'Email'" filter="{'email':'text'}"    sortable="'email'" >{{o.email}}</td>
 			<td width="1%" class="text-right">
-				<i class="glyphicon glyphicon-pencil"></i>
+				<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="admin.organization.user.edit({orgId: org._id, userId: o._id})">
+					<i class="glyphicon glyphicon-pencil"></i>
+				</a>
 			</td>			
 		</tr>
 		<tr ng-show="!$data || !$data.length" class="text-center">
